<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="client"
            type="com.bav.ordermanagementsystem.entity.Client"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/client_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{client.lastName}"
            android:hint="@string/registration_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MyEditTextStyle"/>

        <EditText
            android:id="@+id/client_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyEditTextStyle"
            android:text="@{client.firstName}"
            android:hint="@string/registration_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_last_name" />

        <EditText
            android:id="@+id/client_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyEditTextStyle"
            android:text="@{client.secondName}"
            android:hint="@string/registration_second_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_first_name" />

        <EditText
            android:id="@+id/client_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/MyEditTextStyle"
            android:text="@{client.email}"
            android:hint="@string/registration_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_second_name" />

        <EditText
            android:id="@+id/client_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            style="@style/MyEditTextStyle"
            android:text="@{client.phone.toString()}"
            android:hint="@string/registration_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_mail" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            style="@style/MyButtonStyle"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>